--- a/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.scss
+++ b/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.scss
@@ -9,71 +9,111 @@ ion-content::part(background) {
 }
 
 .container-div{
-    background-color: #14cad7a9;
-    width: 90%;
-    margin-top: 30px;
+    background-color: #f4f4f4aa;
+    margin: 20px;
+    padding: 15px;
     border-radius: 15px;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
-}
-
-
-ion-button{
-    margin-left: 15px;
+    position: relative;
 }
 
 .icon-img{
-    width: 150px;
-    height: 150px;
-    position: relative;
-    top: 30px;
-    left: 100px;
+  width: 120px;
+  height: 120px;
+  margin: auto;
+  margin-bottom: 10px;
 }
 
-.label-titulo{
-    position: relative;
-    left: 130px;
-    top: 50px;
-    font-size: 30px;
+h1, h2, h3{
+  padding: 0;
+  text-align: center;
+}
+h1{
+  font-size: 17pt;
+  font-weight: bold;
+  color: #F39C12;
+}
+h2, h3{
+  font-size: 12pt;
+  font-weight: 600;
+  color: #454545;
 }
 
-.label-doctor{
-    font-size: 15px;
-    width: 200px;
-    position: relative;
-    top: 80px;
-    left: -40px;
+h5{
+  margin: 8px 0 8px 30px;
+  height: 20px;
+  font-size: 12pt;
 }
 
-.label-lapso{
-    position: relative;
-    top: 120px;
-    left: 120px;
-    font-weight: 900;
-    font-size: 20px;
+hr{
+  background-color: #bdbdbd87;
+  width: 90%;
+  margin: auto;
+  padding: 0;
 }
 
-.label-duracion{
-    position: relative;
-    top:  140px;
-    left: 140px;
-    font-weight: 900;
-    font-size: 20px;
+.hora{
+  display: flex;
+  justify-content: space-around;
 }
+
+.descripcion{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn{
+  display: flex;
+  justify-content: space-evenly;
+  margin: 10px 0;
+  font-weight: bold;
+}
+
+
 
 .close{
-    margin-left: 130px;
-    margin-top: 200px;
+  position: absolute;
+  top: 10px;
+  left: 82%;
 }
 
-.edit{
-    margin-left: 30px;
-    margin-top: 230px;
+
+
+/* Estilo para los encabezados de los acordeones */
+ion-item[slot="header"] {
+  border-radius: 25px;
+  border-bottom: 1px solid #ccc;
+  font-size: 14pt;
+  margin-top: 10px;
+  font-weight: bold;
+  background-color: transparent;
 }
 
-ion-badge{
-    margin-left: 30px;
+/* Estilo para los encabezados de los acordeones cerrados */
+ion-accordion:not([expanded]) ion-item[slot="header"] {
+  border-bottom: none;
+  background-color: transparent;
 }
 
+ion-accordion-group[slot="acordion"]{
+  margin: 15px 0;
+}
+
+.accordion{
+  background-color: transparent;
+}
+
+span{
+  color: red;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  font-size: 10pt;
+}
+
+form{
+  margin-top: 20px;
+}
