--- a/src/app/private/pages/buscar/buscar.page.scss
+++ b/src/app/private/pages/buscar/buscar.page.scss
@@ -5,6 +5,10 @@ ion-card {
     /* Ajusta el máximo ancho según tus preferencias */
 }
 
+ion-searchbar{
+    background: none;
+}
+
 .card-content {
     display: flex;
     align-items: center;
