--- a/src/app/private/pages/citas-medicas/components/card-citas/card-citas.component.html
+++ b/src/app/private/pages/citas-medicas/components/card-citas/card-citas.component.html
@@ -3,7 +3,7 @@
     <ion-label [routerLink]="['/cita-medicas-detalle/'+cita.id]" class="label-titulo" color="tertiary"> {{cita.titulo}} </ion-label>
     <br>
     <ion-badge class="label-fecha-final" color="success">Finaliza: {{cita.fecha|date}} </ion-badge>
-    <ion-button color="medium" [routerLink]="['/observacion-create/'+cita.id]" routerLinkActive="router-link-active" class="btn-observacion">Observacion</ion-button>
+    <ion-button *ngIf="user.rol.nombre=='Medico'"  color="medium" [routerLink]="['/observacion-create/'+cita.id]" routerLinkActive="router-link-active" class="btn-observacion">Observacion</ion-button>
     <br>
-    <ion-button color="medium" [routerLink]="['/recetas-crear/'+cita.id]" routerLinkActive="router-link-active" class="btn-receta">Añadir Receta</ion-button>
+    <ion-button  *ngIf="user.rol.nombre=='Medico'" color="medium" [routerLink]="['/recetas-crear/'+cita.id]" routerLinkActive="router-link-active" class="btn-receta">Añadir Receta</ion-button>
 </div>
