Cambiando el navbar el nombre de inicio

--- a/src/app/private/pages/home/home.page.html
+++ b/src/app/private/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<app-navbar [NameRoute]="'Home'" [href]="''" />
+<app-navbar [NameRoute]="'Inicio'" [href]="''" />
 
 <ion-content class="ion-padding" [fullscreen]="true">
   <ng-container *ngIf="user">
