--- a/src/app/private/tabs/tabs.page.html
+++ b/src/app/private/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon aria-hidden="true" name="home-outline" ></ion-icon>
-      <ion-label>Home</ion-label>
+      <ion-label>Inicio</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="buscar">
       <ion-icon aria-hidden="true" name="search" ></ion-icon>
