--- a/src/app/private/pages/observacion/components/card-observaciones/card-observaciones.component.html
+++ b/src/app/private/pages/observacion/components/card-observaciones/card-observaciones.component.html
@@ -1,19 +1,32 @@
 <ion-card-header>
-  <div *ngFor="let observacion of observaciones">
-
-  <div class="flex-warp">
-    <img class="rounded" alt="user" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-    <h3>De:  {{observacion?.cita?.medico?.usuario?.nombre}} <span>{{ observacion?.cita?.medico?.usuario?.apellido}} </span></h3>
-   </div>
-   <p>Para: {{observacion?.cita?.paciente?.usuario?.nombre}}  {{observacion?.cita?.paciente?.usuario?.apellido}}
-   </p>
-   <p class="content-data">
-   {{observacion?.contenido}}
-  </p>
-  <div class="ion-text-center">
-    <ion-button [routerLink]="['/observacion-detalle/'+observacion.id]" routerLinkActive="router-link-active" >
-      Ver detalle
-    </ion-button>
+  <div class="cards" *ngFor="let observacion of observaciones">
+    <div class="flex-warp">
+      <img
+        class="rounded"
+        alt="user"
+        src="https://res.cloudinary.com/duhm7ousd/image/upload/v1691509229/Imagenes-MediBook/Iconos/doctor-celeste_m7izbr.png"
+      />
+      <h3>
+        <b>De:</b>  {{ observacion?.cita?.medico?.usuario?.nombre }}
+        <span>{{ observacion?.cita?.medico?.usuario?.apellido }} </span>
+      </h3>
+    </div>
+    <p>
+      <b>Para:</b> {{ observacion?.cita?.paciente?.usuario?.nombre }}
+      {{ observacion?.cita?.paciente?.usuario?.apellido }}
+    </p>
+    <p class="content-data">
+      {{ observacion?.contenido }}
+    </p>
+    <div class="ion-text-center">
+      <ion-button
+        color="secondary"
+        shape="round"
+        [routerLink]="['/observacion-detalle/' + observacion.id]"
+        routerLinkActive="router-link-active"
+      >
+        Ver detalle
+      </ion-button>
+    </div>
   </div>
-</div>
 </ion-card-header>
