--- a/src/app/private/pages/observacion/components/card-observaciones/card-observaciones.component.scss
+++ b/src/app/private/pages/observacion/components/card-observaciones/card-observaciones.component.scss
@@ -5,9 +5,10 @@
 }
 
 .rounded {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
+  margin-right: 10px;
 }
 
 .flex-warp {
@@ -19,16 +20,36 @@ h3 {
   font-weight: 20px;
   padding-left: 5px;
   font-weight: 700;
+  color: rgb(71, 71, 71);
 }
 
 p {
   font-size: 20px;
   font-weight: 500;
-  margin-top: 2.5px;
+  margin-top: 5px;
+}
+
+b{
+  color: #3498DB;
 }
 
 .content-data {
   font-size: 16px;
   font-weight: 300;
   margin-top: -15px;
+}
+
+
+ion-card-header{
+  margin: 0;
+  padding: 0;
+}
+
+
+.cards{
+  background-color: rgba(229, 227, 227, 0.676);
+  margin-bottom: 30px;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 15px;
 }
