--- a/src/app/private/pages/observacion/observacion.page.scss
+++ b/src/app/private/pages/observacion/observacion.page.scss
@@ -1,7 +1,19 @@
+ion-content::part(background) {
+  background-image: url('https://res.cloudinary.com/duhm7ousd/image/upload/v1692322450/Imagenes-MediBook/img/fondo_movil_oto4cx.jpg');
+  background-size: cover;
+  background-position: start;
+  background-repeat: no-repeat;
+
+  /* Agrega un color de fondo con opacidad utilizando rgba() */
+  background-color: rgba(255, 255, 255, 0.9); /* El último valor (0.5) controla la opacidad */
+}
+
 .title {
   margin-top: 25px;
   text-align: center;
-  font-weight: 700;
+  font-weight: 800;
+  font-size: 19pt;
+  color: #F39C12;
 }
 
 .rounded {
@@ -32,3 +44,11 @@ p {
   font-weight: 300;
   margin-top: -15px;
 }
+
+
+ion-card-header{
+  background-color: transparent;
+  margin: 0px 30px 30px 30px;
+}
+
+
