--- a/src/app/private/pages/buscar/buscar.page.scss
+++ b/src/app/private/pages/buscar/buscar.page.scss
@@ -5,7 +5,7 @@ ion-card {
     /* Ajusta el máximo ancho según tus preferencias */
 }
 
-ion-searchbar{
+ion-searchbar {
     background: none;
 }
 
@@ -41,4 +41,15 @@ p {
     margin: 0;
     font-size: 14px;
     color: #777;
+}
+
+ion-content::part(background) {
+    background-image: url('https://res.cloudinary.com/duhm7ousd/image/upload/v1692322450/Imagenes-MediBook/img/fondo_movil_oto4cx.jpg');
+    background-size: cover;
+    background-position: start;
+    background-repeat: no-repeat;
+    /* Agrega un color de fondo con opacidad utilizando rgba() */
+    background-color: rgba(255, 255, 255, 0.9);
+    /* El último valor (0.5) controla la opacidad */
+    color: black;
 }
