Añadido el botón de realizar pago con su diseño

--- a/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
+++ b/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
@@ -126,10 +126,15 @@
       <ion-button color="primary" *ngIf="user.rol.nombre==='Paciente'" [routerLink]="['/resenia-crear',id]" shape="round">
         Crear Reseña
       </ion-button>
-      <ion-button (click)=" EditMecament()" *ngIf="user.rol.nombre==='Paciente'" color="warning" shape="round">
+      <ion-button  *ngIf="user.rol.nombre==='Paciente'" color="warning" shape="round">
         Editar Cita
       </ion-button>
     </div>
+
+    <ion-button class="btn-pagos" [routerLink]="['/pagos-crear',cita.id,cita.medico.id]" 
+    *ngIf="user.rol.nombre==='Paciente'" color="warning" shape="round">
+      Añadir Pago  <ion-icon class="btn-pagos_icono" name="cash-outline"></ion-icon>
+    </ion-button>
 
     <ion-fab class="close">
       <ion-fab-button (click)="DeleteMedicament()" *ngIf="user.rol.nombre==='Paciente'" color="danger">
