--- a/src/app/private/pages/profile/profile.page.html
+++ b/src/app/private/pages/profile/profile.page.html
@@ -13,28 +13,28 @@
           src="https://ionicframework.com/docs/img/demos/avatar.svg"
         />
         <h3>
-          {{medico?.usuario.nombre |titlecase}}
+          {{medico?.usuario?.nombre |titlecase}}
           <span> {{medico?.usuario.apellido|titlecase}} </span>
         </h3>
         <h3>
-          {{paciente?.usuario.nombre |titlecase}}
-          <span> {{paciente?.usuario.apellido|titlecase}} </span>
+          {{paciente?.usuario?.nombre |titlecase}}
+          <span> {{paciente?.usuario?.apellido|titlecase}} </span>
         </h3>
-        <p>{{medico?.usuario.email}}</p>
-        <p>{{paciente?.usuario.email}}</p>
+        <p>{{medico?.usuario?.email}}</p>
+        <p>{{paciente?.usuario?.email}}</p>
       </div>
 
       <div class="flex-warp-content">
         <div class="data-content">
           <ion-icon name="location-outline"></ion-icon>
           <div class="subtitle">
-            {{medico?.usuario.ubicacion.provincia|titlecase}}-<span>
-              {{medico?.usuario.ubicacion.canton|titlecase}}
+            {{medico?.usuario?.ubicacion?.provincia|titlecase}}-<span>
+              {{medico?.usuario?.ubicacion?.canton|titlecase}}
             </span>
           </div>
           <div class="subtitle">
-            {{paciente?.usuario.ubicacion.provincia|titlecase}}-<span>
-              {{paciente?.usuario.ubicacion.canton|titlecase}}
+            {{paciente?.usuario?.ubicacion?.provincia|titlecase}}-<span>
+              {{paciente?.usuario?.ubicacion?.canton|titlecase}}
             </span>
           </div>
         </div>
@@ -42,13 +42,13 @@
         <div class="data-content" *ngIf="rol===2">
           <ion-icon name="calendar-outline"></ion-icon>
           <div class="subtitle">
-            Especialidad: {{medico.especialidad.nombre}}
+            Especialidad: {{medico?.especialidad?.nombre}}
           </div>
         </div>
       </div>
     </ion-card-header>
   </ion-card>
-  <app-card-items-titulo *ngIf="rol===2" [titulos]="medico.titulo" />
+  <app-card-items-titulo *ngIf="rol===2" [titulos]="medico?.horario?.length>0" />
   <ion-card-header *ngIf="rol===2">
     <ion-accordion-group [multiple]="false" [value]="['first']">
       <ion-accordion-group>
@@ -59,11 +59,11 @@
         >
           <ion-item class="dias-laborables" slot="header" color="medium">
             <div class="subtitle">
-              <span>Días Laborables: </span>{{medico.horario.length}}
+              <span>Días Laborables: </span>{{medico?.horario?.length}}
             </div>
           </ion-item>
 
-          <div slot="content">
+          <div slot="content" *ngIf="medico?.horario?.length>0"> 
             <div class="data-content" *ngFor="let horario of medico.horario">
               <ion-icon name="alarm-outline"></ion-icon>
               <div class="subtitle">
@@ -77,35 +77,52 @@
       </ion-accordion-group>
     </ion-accordion-group>
   </ion-card-header>
-  <app-card-items-antecedentes
-    [antecedentes]="paciente.antecedentes_medico"
+  <ng-container *ngIf="paciente?.antecedentes_medico?.length>0">
+
+    <app-card-items-antecedentes
+    [antecedentes]="paciente?.antecedentes_medico"
     *ngIf="rol===3"
-  />
-  <app-card-items
+    />
+  </ng-container>
+  <ng-container *ngIf="paciente?.cita?.length>0">
+    <app-card-items
     [Number]="paciente?.cita?.length"
     [Nombre]="'Citas'"
     *ngIf="paciente"
-  />
+    />
+  </ng-container>
+  <ng-container 
+  *ngIf="medico?.cita?.length>0"
+  >
   <app-card-items
-    [Number]="medico?.cita?.length"
-    [Nombre]="'Citas'"
-    *ngIf="medico"
-  />
+  [Number]="medico?.cita?.length"
+  [Nombre]="'Citas'"
+  *ngIf="medico"
+/></ng-container>
+<ng-container *ngIf="paciente?.vacuna?.length>0">
+
   <app-card-items
-    [Number]="paciente?.vacuna?.length"
-    [Nombre]="'Vacunas'"
-    *ngIf="rol===3"
+  [Number]="paciente?.vacuna?.length"
+  [Nombre]="'Vacunas'"
+  *ngIf="rol===3"
   />
+</ng-container>
+<ng-container *ngIf="paciente?.medicamento?.length" >
+
   <app-card-items
-    [Number]="paciente?.medicamento?.length"
-    [Nombre]="'Medicamentos'"
-    *ngIf="rol===3"
+  [Number]="paciente?.medicamento?.length"
+  [Nombre]="'Medicamentos'"
+  *ngIf="rol===3"
   />
+</ng-container>
+<ng-container *ngIf="paciente?.examenes_medico?.length>0">
+
   <app-card-items
-    [Number]="paciente?.examenes_medico?.length"
-    [Nombre]="'Examenes'"
-    *ngIf="rol===3"
+  [Number]="paciente?.examenes_medico?.length"
+  [Nombre]="'Examenes'"
+  *ngIf="rol===3"
   />
+</ng-container>
   <div class="ion-text-center ion-margin-top">
     <ion-button [routerLink]="['/cambiar-password']" color="primary">
       Cambiar contraseña
