--- a/src/app/private/pages/buscar/buscar.page.html
+++ b/src/app/private/pages/buscar/buscar.page.html
@@ -21,7 +21,7 @@
                 <ion-card-content>
                     <div class="card-content">
                         <ion-thumbnail *ngIf="item.especialidad.nombre == 'Medicina Familiar'" class="avatar">
-                            <img src="../../../../assets/img/ante-detalles.png" alt="Avatar">
+                            <img src="../../../../assets/img/medicina-familiar.png" alt="Avatar">
                         </ion-thumbnail>
                         <ion-thumbnail *ngIf="item.especialidad.nombre == 'Infectología'" class="avatar">
                             <img src="../../../../assets/img/infectologia.png" alt="Avatar">
@@ -44,6 +44,10 @@
                         <ion-thumbnail *ngIf="item.especialidad.nombre == 'Psiquiatría'" class="avatar">
                             <img src="../../../../assets/img/Psiquiatría.png" alt="Avatar">
                         </ion-thumbnail>
+                        <ion-thumbnail *ngIf="item.especialidad.nombre == 'Gastroenterología' || item.especialidad.nombre == 'Hematología'|| item.especialidad.nombre == 'Nefrología' || item.especialidad.nombre == 'Neurología' || item.especialidad.nombre == 'Oftalmología' || item.especialidad.nombre == 'Oncología' || item.especialidad.nombre == 'Reumatología' || item.especialidad.nombre == 'Urología'" class="avatar">
+                            <img src="../../../../assets/img/no-img.png" alt="Avatar">
+                        </ion-thumbnail>
+
                             
                         <div class="info">
                             <h2>{{ item.usuario.nombre|titlecase }} {{item.usuario.apellido|titlecase}}</h2>
