--- a/src/app/private/pages/examenes-medicos-detalle/examenes-medicos-detalle.page.scss
+++ b/src/app/private/pages/examenes-medicos-detalle/examenes-medicos-detalle.page.scss
@@ -1,6 +1,17 @@
+ion-content::part(background) {
+  background-image: url('https://res.cloudinary.com/duhm7ousd/image/upload/v1692322450/Imagenes-MediBook/img/fondo_movil_oto4cx.jpg');
+  background-size: cover;
+  background-position: start;
+  background-repeat: no-repeat;
+
+  /* Agrega un color de fondo con opacidad utilizando rgba() */
+  background-color: rgba(255, 255, 255, 0.9); /* El último valor (0.5) controla la opacidad */
+}
+
 .container-div {
-    background-color: #95a5a6a9;
-    width: 350px;
+    background-color: #dadadaa9;
+    position: relative;
+    margin: 30px 30px 30px 30px;
     height: 500px;
     border-radius: 15px;
     -webkit-border-radius: 15px;
@@ -24,41 +35,46 @@ ion-button {
 }
 
 h2 {
-    color: blue;
+    color: rgb(52, 52, 52);
     position: absolute;
+    width: 100%;
+    text-align: center;
     top: 39%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-weight: bold;
 }
 
 .label-fecha{
     position: relative;
-    margin-top: 70px;
-    left: 65px;
+    top: 180px;
+    left: 68px;
     font-size: 20px;
 }
 
 .acciones {
     position: absolute;
-    top: 30%;
+    top: 60%;
     left: 20%;
     transform: translate(-50%, -50%);
 }
 
 .close {
-    margin-left: 80px;
-    margin-top: 100px;
+  position: absolute;
+  top: 1%;
+  left: 82%;
 }
 
 .edit {
-    margin-left: -20px;
-    margin-top: 100px;
+  position: absolute;
+  top: 80%;
+  left: 42%;
 }
 
 .text-resultado{
-    position: relative;
+    position: absolute;
     left: 120px;
-    top: 25px;
+    top: 270px;
     font-size: 25px;
 }
 
@@ -67,5 +83,10 @@ h2 {
 }
 
 span{
-    margin-left: -15px;
+    margin-left: -10px;
+}
+
+
+ion-icon{
+  margin-right: 10px;
 }
