--- a/src/app/private/pages/examenes-medicos/components/card-examenes-medicos/card-examenes-medicos.component.scss
+++ b/src/app/private/pages/examenes-medicos/components/card-examenes-medicos/card-examenes-medicos.component.scss
@@ -6,16 +6,10 @@
 }
 
 div {
-  background-color: #95a5a6a9;
-  width: 350px;
-  height: 160px;
-  border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
-  margin-left: 0px;
-  margin-top: 20px;
 }
 
 .active {
@@ -33,21 +27,29 @@ div {
 .icon-img {
   width: 90px;
   height: 90px;
-  position: relative;
-  top: 30px;
-  left: 25px;
+}
+
+.interno{
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
 .label-nombre {
-  position: relative;
-  left: 130px;
-  top: -45px;
-  font-size: 30px;
+  font-size: 18pt;
+  font-weight: bold;
+  width: 100%;
+  color: rgb(69, 69, 69);
 }
 
 .label-fecha {
-  position: relative;
-  left: 130px;
-  top: -30px;
   font-size: 15px;
+  margin-top: 10px;
+}
+
+
+ion-card{
+  margin: 30px 30px 0px 30px;
+  border-radius: 13px;
+  background-color: rgba(245, 245, 245, 0.817);
 }
